# Figures

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  application.cpp  include_lib.hpp
src/app/: app.cpp  app.hpp
src/factories/: factory.cpp  factory.hpp  factory_triangle.hpp
src/factories/abstract_factory/: abstract_factory.cpp  abstract_factory.hpp
src/factories/figure_factories/: circle_factory.cpp  circle_factory.hpp  figure_factory.hpp  rectangle_factory.cpp  rectangle_factory.hpp  triangle_factory.cpp  triangle_factory.hpp
src/factories/init_utils/: init_utils.cpp  init_utils.hpp
src/factories/source_figure_factories/: random_figure_factory.cpp  random_figure_factory.hpp  source_figure_factory.hpp  stream_figure_factory.cpp  stream_figure_factory.hpp
src/figures/: circle.cpp  circle.hpp  figure.hpp  rectangle.cpp  rectangle.hpp  triangle.cpp  triangle.hpp
test/: CMakeLists.txt  test-figures.cpp
